unpackaged/main/default/objects/ET_External_Endpoint__mdt/ET_External_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>ET External Endpoint</label>
    <pluralLabel>ET External Endpoints</pluralLabel>
</CustomObject>