unpackaged/main/default/objects/ET_External_Endpoint__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>