unpackaged/main/default/objects/ET_External_Endpoint__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content-Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>