unpackaged/main/default/objects/ET_External_Endpoint__mdt/fields/EnvironmentType__c.field-meta.xml
<CustomField>
    <fullName>EnvironmentType__c</fullName>
    <label>EnvironmentType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>