unpackaged/main/default/objects/ET_External_Endpoint__mdt/fields/HostedSessionID__c.field-meta.xml
<CustomField>
    <fullName>HostedSessionID__c</fullName>
    <label>HostedSessionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>