unpackaged/main/default/objects/ET_External_Endpoint__mdt/fields/outletRef__c.field-meta.xml
<CustomField>
    <fullName>outletRef__c</fullName>
    <label>outletRef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>