unpackaged/main/default/objects/ET_External_Endpoint__mdt/fields/PaymentURL__c.field-meta.xml
<CustomField>
    <fullName>PaymentURL__c</fullName>
    <label>PaymentURL</label>
    <type>Url</type>
</CustomField>